tests/NormalTests/paczka1/fuzzy1/53586045.err
Error in line 16: A44 A597 228,85
Error in line 12: khDTTB4bf A597 77,1
Error in line 8: i20Z6 A597 68,5
Error in line 19: i20Z6 S549 98,4
Error in line 32: A44 S124 35,56
Error in line 30: rfacBkF6K S124 73,6
Error in line 35: A44 S124 118,9
